--- a/config.json
+++ b/config.json
@@ -1,10 +1,11 @@
 {
 	"ctrl_btn":14,
-	"left_motor":{"EN":13,"IN1":5,"IN2":6},
-	"right_motor":{"EN":19,"IN1":20,"IN2":21},
-	"I2Caddress":"0x68",
-	"gyro":{"axis":"x","calibration":5.0,"target":0.0},
-	"accel":{"axis":"x","calibration":0.0,"target":0.0},
-	"pid":[0.0,0.0,0.0],
-	"ctrl_led":15
+	"ctrl_led":15,
+	"lmotor":{"EN":13,"IN1":5,"IN2":6},
+	"rmotor":{"EN":19,"IN1":20,"IN2":16},
+	"gyro":{"address":104,"axis":"x","calibration":5.5,"target":0.0},
+	"gyro_filter":{"K1":0.98,"K2":0.02},
+	"pid":[1.0,0.0,0.0],
+	"frequency":10,
+	"max_angle":45
 }
