--- a/config.json
+++ b/config.json
@@ -3,10 +3,12 @@
 	"ctrl_led":15,
 	"lmotor":{"EN":13,"IN1":5,"IN2":6},
 	"rmotor":{"EN":19,"IN1":20,"IN2":16},
-	"gyro":{"address":104,"axis":"x","calibration":5.5,"target":0.0},
-	"gyro_filter":{"K1":0.98,"K2":0.02},
-	"pid":[1.0,0.0,0.0],
-	"frequency":10,
-	"min_power":95,
-	"max_angle":45
+	"gyro":{"address":104,"axis":"x","calibration":0,"target":-7.0},
+	"gyro_filter":{"K1":0.99,"K2":0.01},
+	"pid":[5.0,0.5,4.0],
+	"motors_balance":{"left":1.0,"right":1.0},
+	"frequency":1000,
+	"max_power":100.0,
+	"min_power":1.0,
+	"max_angle":35
 }
